--- a/Javascript.html
+++ b/Javascript.html
@@ -4,17 +4,10 @@
 
 <h2> This is an example of Javascript Statements. </h2>
 
-<p> id="demo"></p>
+<p id="demo"></p>
 
 <script>
-
-let x, y, z;
-
-x = 1
-y = 2
-z = x + y;
-
-document.getElementById("demo").innerHTML = "The value of z is " + z + ".";
+document.getElementById("demo").innerHTML = "Hello human.";
 </script>
 
 </body>
