--- a/Javascript.html
+++ b/Javascript.html
@@ -7,8 +7,8 @@
 <p id="demo"></p>
 
 <script>
-document.getElementById("demo").innerHTML = "Hello human.";
-</script>
-
+document.getElementById("demo").innerHTML = "Hello human."
+document.getElementById("demo").innerHTML = "How may I assist you?"    
+    
 </body>
 </html>
