--- a/Javascript.html
+++ b/Javascript.html
@@ -2,19 +2,15 @@
 <html>
 <body>
 
-<h2> This is an example of Javascript Statements. </h2>
+<h2> This is an example of Javascript Variables. </h2>
 
-<button onclick="myFunction()">Click Me</button>
-
-<p id="demo1"></p>
-<p id="demo2"></p>
+<p id="demo"></p>
 
 <script>
-    function myFunction() {
-        document.getElementById("demo1").innerHTML = "Hello human";
-        document.getElementById("demo2").innerHTML = "How may I assist you?";
-    }
-    </script>
+let x;
+x = 3;
+document.getElementById("demo").innerHTML = x;
+</script>
 
 </body>
 </html>
