--- a/Javascript.html
+++ b/Javascript.html
@@ -2,14 +2,12 @@
 <html>
 <body>
 
-<h2> This is an example of Javascript Variables. </h2>
+<h2> This is an example of Javascript Operators. </h2>
 
 <p id="demo"></p>
 
 <script>
-let x;
-x = 3;
-document.getElementById("demo").innerHTML = x;
+document.getElementById("demo").innerHTML = (3 + 7) * 10;
 </script>
 
 </body>
