--- a/Javascript.html
+++ b/Javascript.html
@@ -7,7 +7,10 @@
 <p id="demo"></p>
 
 <script>
-document.getElementById("demo").innerHTML = (3 + 7) * 10;
+let x, y;
+x = 3;
+y = 7;
+document.getElementById("demo").innerHTML = (x * y);
 </script>
 
 </body>
