Javascript variable, operator, and expression examples.

--- a/Javascript.html
+++ b/Javascript.html
@@ -7,10 +7,11 @@
 <p id="demo"></p>
 
 <script>
-let x, y;
+var x;    //Variable
+let y;
 x = 3;
 y = 7;
-document.getElementById("demo").innerHTML = (x * y);
+let z = (x * 11.5) + y; //Operators and Expressions
 </script>
 
 </body>
