Fixed issue where result of (x * 11.5 + y would not display on webpage.

--- a/Javascript.html
+++ b/Javascript.html
@@ -12,6 +12,8 @@ let y;
 x = 3;
 y = 7;
 let z = (x * 11.5) + y; //Operators and Expressions
+
+document.getElementById("demo").innerHTML = z;
 </script>
 
 </body>
