Example of identifiers

--- a/Javascript.html
+++ b/Javascript.html
@@ -7,13 +7,11 @@
 <p id="demo"></p>
 
 <script>
-var x;    //Variable
-let y;
-x = 3;
-y = 7;
-let z = (x * 11.5) + y; //Operators and Expressions
+let thisOne, thisone;
+thisOne = "thingOne";
+thisone = "thingTwo";
 
-document.getElementById("demo").innerHTML = z;
+document.getElementById("demo").innerHTML = thisOne;
 </script>
 
 </body>
