--- a/Javascript.html
+++ b/Javascript.html
@@ -8,8 +8,8 @@
 
 <script>
 let thisOne, thisone;
-thisOne = "thingOne";
-thisone = "thingTwo";
+thisOne = "Thing 1";
+thisone = "Thing 2";
 
 document.getElementById("demo").innerHTML = thisOne;
 </script>
