--- a/Javascript.html
+++ b/Javascript.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
+
 <html>
 <body>
 
-<h2> This is an example of Javascript Operators. </h2>
-
-<p id="demo"></p>
+<h1 id="h"></h1>
+<p1 id="p1"></p1>
+<p2 id="p2"></p2>
+<p3 id="p3"></p3>
+<p4 id="p4"></p4>
 
 <script>
-let thisOne, thisone;
-thisOne = "Thing 1";
-thisone = "Thing 2";
-
-document.getElementById("demo").innerHTML = thisOne;
+document.getElementById("h").innerHTML = "This is just a basic webpage"
+document.getElementById("p1").innerHTML = "DO NOT check the code."
+// Hidden text:    
+//document.getElementById("p2").innerHTML = "When will seeing only what's displayed on the webpage be enough for you?"
+//document.getElementById("p3").innerHTML = "Are you that dissatisfied in life that you can't just accept what's given"
+//document.getElementById("p4").innerHTML = "and be greatful for it? That's quite sad, honestly."
 </script>
 
 </body>
