--- a/Javascript.html
+++ b/Javascript.html
@@ -19,10 +19,10 @@
             "be happy with what's given to you? What, the webpage wasn't enough? You just HAD to click the button just because " +
             "your incurable, ravenous curiosity wasn't satisfied with what was offered? How UNGRATEFUL. Shame on you!";
 
-        document.getElementById("p3").style.display = "block";
+        /*document.getElementById("p3").style.display = "block";
         document.getElementById("p3").innerHTML =
             "Are you so miserable and empty, so desperate for something to fill the void that even clicking the button wasn't enough for you, " +
-            "so you had to go and click that oh-so-tempting F12 key and see what was hiding in the HTML? Pathetic.";
+            "so you had to go and click that oh-so-tempting F12 key and see what was hiding in the HTML? Pathetic.";*/
     }
 </script>
 
