--- a/Javascript.html
+++ b/Javascript.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h1>Javascript Variables</h1>
 
-<h1 id="h"></h1>
-<p id="p1"></p>
-<p id="p2"></p>
-<p id="p3" style="display:none; color:red;"></p>
+<p> x, y, and z are undeclared.</p>
 
-<button onclick="handleClick()">DO NOT click this button</button>
+<p id="demo"></p>
 
 <script>
-    document.getElementById("h").innerHTML = "This is just a basic webpage.";
-    document.getElementById("p1").innerHTML = "DO NOT click that button.";
-
-    function handleClick() {
-        document.getElementById("p2").innerHTML =
-            "Are you that bored and dissatisfied in life that you can't just " +
-            "be happy with what's given to you? What, the webpage wasn't enough? You just HAD to click the button just because " +
-            "your incurable, ravenous curiosity wasn't satisfied with what was offered? How UNGRATEFUL. Shame on you!";
-
-        /*document.getElementById("p3").style.display = "block";
-        document.getElementById("p3").innerHTML =
-            "Are you so miserable and empty, so desperate for something to fill the void that even clicking the button wasn't enough for you, " +
-            "so you had to go and click that oh-so-tempting F12 key and see what was hiding in the HTML? Pathetic.";*/
-    }
+x = 7;
+y = 6;
+z = x + y;
+document.getElementById("demo").innerHTML = 
+"The value of z is" + z;    
 </script>
 
 </body>
