--- a/Javascript.html
+++ b/Javascript.html
@@ -3,14 +3,14 @@
 <body>
 <h1>Javascript Variables</h1>
 
-<p> x, y, and z are undeclared.</p>
+<p> x, y, and z are variables in this example.</p>
 
 <p id="demo"></p>
 
 <script>
-x = 7;
-y = 6;
-z = x + y;
+var x = 7;
+var y = 6;
+var z = x + y;
 document.getElementById("demo").innerHTML = 
 "The value of z is" + z;    
 </script>
