--- a/Javascript.html
+++ b/Javascript.html
@@ -3,14 +3,14 @@
 <body>
 <h1>Javascript Variables</h1>
 
-<p> x, y, and z are variables in this example.</p>
+<p> I'm uisng let in this example instead of var.</p>
 
 <p id="demo"></p>
 
 <script>
-var x = 7;
-var y = 6;
-var z = x + y;
+let x = 7;
+let y = 6;
+let z = x + y;
 document.getElementById("demo").innerHTML = 
 "The value of z is" + z;    
 </script>
