--- a/Javascript.html
+++ b/Javascript.html
@@ -3,14 +3,14 @@
 <body>
 <h1>Javascript Variables</h1>
 
-<p> I'm uisng let in this example instead of var.</p>
+<p> I'm uisng const in this example instead of let or var.</p>
 
 <p id="demo"></p>
 
 <script>
-let x = 7;
-let y = 6;
-let z = x + y;
+const x = 7;
+const y = 6;
+const z = x + y;
 document.getElementById("demo").innerHTML = 
 "The value of z is" + z;    
 </script>
