Javascript Datatypes example

--- a/Javascript.html
+++ b/Javascript.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Javascript Variables</h1>
-
-<p> I'm using a mix of variable declarations in this example.</p>
+<h1>Javascript Datatypes</h1>
 
 <p id="demo"></p>
 
 <script>
-var price = 10;
-var tax = 1.5;
-const greed = 1.5
-const total = price + tax + greed;
+let person = 'Goku';
+const goku = 9000;
 document.getElementById("demo").innerHTML = 
-"The total is " + total;    
+person+"'s" + "is over" + goku;    
 </script>
 
 </body>
