changed Goku to Rizzloku and goku to rizzLoku

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,10 +6,10 @@
 <p id="demo"></p>
 
 <script>
-let person = 'Goku';
-const goku = 9000;
+let person = 'Rizzloku';
+const rizzLoku = 9000;
 document.getElementById("demo").innerHTML = 
-person+"'s" + " power is over " + goku;    
+person+"'s" + " power is over " + rizzLoku;    
 </script>
 
 </body>
