JS declaring many variables in one statement example

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,10 +6,11 @@
 <p id="demo"></p>
 
 <script>
-let person = 'Rizzloku';
-const rizzLoku = 9000;
+const personA = 'Rizzloku', personB = 'Gohan';
+const rizzLoku = 9000, gohan = "Ultimate";
 document.getElementById("demo").innerHTML = 
-person+"'s" + " power is over " + rizzLoku;    
+personA+"'s" + " power is over " + rizzLoku + "<br>" +
+personB+"'s" + " in his " + gohan + " form! ";    
 </script>
 
 </body>
