JS Variable redeclaration example

--- a/Javascript.html
+++ b/Javascript.html
@@ -5,11 +5,11 @@
 <p id="demo"></p>
 
 <script>
-const personA = 'Rizzloku', personB = 'Gohan';
-const rizzLoku = 9000, gohan = "Ultimate";
+var person = 'Goku'; //Variable
+var person; //Variable redeclared
+const goku = 9000;
 document.getElementById("demo").innerHTML = 
-personA+"'s" + " power is over " + rizzLoku + "<br>" +
-personB+"'s" + " in his " + gohan + " form! ";    
+person+"'s" + " power is over " + goku + "!";    
 </script>
 
 </body>
