JS Arithmetic example

--- a/Javascript.html
+++ b/Javascript.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Javascript Arithmetic</h2>
 
 <p id="demo"></p>
 
 <script>
-var person = 'Goku'; //Variable
-var person; //Variable redeclared
-const goku = 9000;
-document.getElementById("demo").innerHTML = 
-person+"'s" + " power is over " + goku + "!";    
+let x = 28 + 29 + 30;
+document.getElementById("demo").innerHTML = x;    
 </script>
 
 </body>
