--- a/Javascript.html
+++ b/Javascript.html
@@ -7,7 +7,8 @@
 
 <script>
 let x = 28 + 29 + 30;
-document.getElementById("demo").innerHTML = x;    
+let y = "Steven" + " " + "Tyler"; //added strings
+document.getElementById("demo").innerHTML = x + "<br>" + y;
 </script>
 
 </body>
