JS Arithmetic number as string example

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,8 +6,8 @@
 <p id="demo"></p>
 
 <script>
-let x = 28 + 29 + 30;
-let y = "Steven" + " " + "Tyler"; //added strings
+let x = "28" + 29 + 30; //28 is a string
+let y = "Steven" + " " + "Tyler";
 document.getElementById("demo").innerHTML = x + "<br>" + y;
 </script>
 
