--- a/Javascript.html
+++ b/Javascript.html
@@ -6,8 +6,8 @@
 <p id="demo"></p>
 
 <script>
-let x = "28" + 29 + 30; //28 is a string
-let y = "Steven" + " " + "Tyler";
+let x = 3100 + 2050 + " " + "30"; //30 is now a string
+let y = "Eddie" + " " + "Van" + " " + "Halen"; //changed name from Steven Tyler to Eddie Van Halen
 document.getElementById("demo").innerHTML = x + "<br>" + y;
 </script>
 
