JS arithmetic dollar sign ($) example

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,9 +6,9 @@
 <p id="demo"></p>
 
 <script>
-let x = 3100 + 2050 + " " + "30"; //30 is now a string
-let y = "Eddie" + " " + "Van" + " " + "Halen"; //changed name from Steven Tyler to Eddie Van Halen
-document.getElementById("demo").innerHTML = x + "<br>" + y;
+let $$$ = 200;
+let $myMoney = 100;
+document.getElementById("demo").innerHTML = $$$ + $myMoney;
 </script>
 
 </body>
