JS arithmetic underscore (_) example

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,9 +6,9 @@
 <p id="demo"></p>
 
 <script>
-let $$$ = 200;
-let $myMoney = 100;
-document.getElementById("demo").innerHTML = $$$ + $myMoney;
+let _yourName = "Taki";
+let _yourLastName = "Tachibana";
+document.getElementById("demo").innerHTML = _yourName + " " + _yourLastName;
 </script>
 
 </body>
