JS variable redeclaration example 3 corrected
*Fixed placement of document.getElementById("demo").innerHTML = firstName;, moved from line 14 to 15.

--- a/Javascript.html
+++ b/Javascript.html
@@ -7,12 +7,12 @@
 
 <script>
 //variable    
-var firstName = "Ben"; //if this line is commented out, firstName = Jonathan
+var firstName = "Ben";
 //variable redeclared
 {
-var firstName = "Jonathan"; //if this line is commented out, firstName = Ben
-document.getElementById("demo").innerHTML = firstName;
+    var firstName = "Jonathan"; 
 }
+document.getElementById("demo").innerHTML = firstName; //firstName = Jonathan
 </script>
 
 </body>
