JS variable redeclaration example 4

--- a/Javascript.html
+++ b/Javascript.html
@@ -7,12 +7,12 @@
 
 <script>
 //variable    
-var firstName = "Ben";
+let firstName = "Ben";
 //variable redeclared
 {
-    var firstName = "Jonathan"; 
+    let firstName = "Jonathan"; 
 }
-document.getElementById("demo").innerHTML = firstName; //firstName = Jonathan
+document.getElementById("demo").innerHTML = firstName; //firstName = Ben
 </script>
 
 </body>
