JS var declaration example

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,13 +6,10 @@
 <p id="demo"></p>
 
 <script>
-//variable    
-let firstName = "Ben";
-//variable redeclared
-{
-    let firstName = "Jonathan"; 
-}
-document.getElementById("demo").innerHTML = firstName; //firstName = Ben
+//variable value assigned    
+firstName = "Ben";
+document.getElementById("demo").innerHTML = firstName;
+var firstName; //variable declared
 </script>
 
 </body>
