Javascript Operator example 1

--- a/Javascript.html
+++ b/Javascript.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Javascript Redeclaration</h2>
+<h2>Javascript Operators</h2>
 
 <p id="demo"></p>
 
 <script>
-//variable value assigned    
-firstName = "Ben";
-document.getElementById("demo").innerHTML = firstName;
-var firstName; //variable declared
+
+let x = 3; // "=" is the operator in this example
+document.getElementById("demo").innerHTML = x;
+    
 </script>
 
 </body>
