Javascript operators example 2

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,9 +6,14 @@
 <p id="demo"></p>
 
 <script>
-
-let x = 3; // "=" is the operator in this example
-document.getElementById("demo").innerHTML = x;
+// x is assigned the value of 3
+let x = 3;
+// y is assigned the value of 4
+let y = 4;
+// z is assigned the value of 5
+let z = x + y;
+// display z
+document.getElementById("demo").innerHTML = "The sum of x + y is " + z;
     
 </script>
 
