Javascript operators example 3

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,13 +6,9 @@
 <p id="demo"></p>
 
 <script>
-// x is assigned the value of 3
 let x = 3;
-// y is assigned the value of 4
 let y = 4;
-// z is assigned the value of 5
-let z = x + y;
-// display z
+let z = x + y; // the + operator adds the values of x and y together
 document.getElementById("demo").innerHTML = "The sum of x + y is " + z;
     
 </script>
