Javascript operators example 4

--- a/Javascript.html
+++ b/Javascript.html
@@ -8,8 +8,8 @@
 <script>
 let x = 3;
 let y = 4;
-let z = x + y; // the + operator adds the values of x and y together
-document.getElementById("demo").innerHTML = "The sum of x + y is " + z;
+let z = x * y; // the * operator multiplies the value of x by the value of y
+document.getElementById("demo").innerHTML = "x * y is " + z;
     
 </script>
 
