Javascript Arithmetic Operators example

--- a/Javascript.html
+++ b/Javascript.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Javascript Operators</h2>
+<h2>Javascript Arithmetic Operators</h2>
 
 <p id="demo"></p>
 
 <script>
-let x = 3;
-let y = 4;
-let z = x * y; // the * operator multiplies the value of x by the value of y
-document.getElementById("demo").innerHTML = "x * y is " + z;
+/*In this example, 700 and 300 are added together
+and multiplied by a to get a new number.    
+ */
+let a = 10;
+let x = (700 + 300) * a;
+document.getElementById("demo").innerHTML = x;
     
 </script>
 
