Javascript Addition Assignment Operator Example

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,11 +6,8 @@
 <p id="demo"></p>
 
 <script>
-/*In this example, 700 and 300 are added together
-and multiplied by a to get a new number.    
- */
-let a = 10;
-let x = (700 + 300) * a;
+let x = 11;
+x += 4;
 document.getElementById("demo").innerHTML = x;
     
 </script>
