Javascript Comparison Operators on Strings example

--- a/Javascript.html
+++ b/Javascript.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Javascript Arithmetic Operators</h2>
+<h2>Javascript Comparison Operators on Strings</h2>
 
 <p id="demo"></p>
 
 <script>
-let x = 11;
-x += 4;
-document.getElementById("demo").innerHTML = x;
-    
+let text1 = "A";
+let text2 = "B";
+let result = text1 < text2;
+document.getElementById("demo").innerHTML = "Is A less than B? " + result;
 </script>
 
 </body>
