--- a/Javascript.html
+++ b/Javascript.html
@@ -6,10 +6,10 @@
 <p id="demo"></p>
 
 <script>
-let text1 = "A";
-let text2 = "B";
+let text1 = "1";
+let text2 = "2";
 let result = text1 < text2;
-document.getElementById("demo").innerHTML = "Is A less than B? " + result;
+document.getElementById("demo").innerHTML = "Is 1 less than 2? " + result; // strings are compared alphabetically
 </script>
 
 </body>
