--- a/Javascript.html
+++ b/Javascript.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Javascript Comparison Operators on Strings</h2>
+<h2>Javascript String Operators</h2>
 
 <p id="demo"></p>
 
 <script>
-let text1 = "1";
-let text2 = "2";
-let result = text1 < text2;
-document.getElementById("demo").innerHTML = "Is 1 less than 2? " + result; // strings are compared alphabetically
+let text1 = "Ben";
+let text2 = "Reilly";
+let text3 = text1 + " " + text2; // the + operator adds the text1 and text 2 strings
+document.getElementById("demo").innerHTML = text3;
 </script>
 
 </body>
