Javascript String Operators example 2

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,10 +6,9 @@
 <p id="demo"></p>
 
 <script>
-let text1 = "Ben";
-let text2 = "Reilly";
-let text3 = text1 + " " + text2; // the + operator adds the text1 and text 2 strings
-document.getElementById("demo").innerHTML = text3;
+let text = "Ben Reilly is ";
+text += "the Scarlet Spider"; // the += adds this text to the "text" variable
+document.getElementById("demo").innerHTML = text;
 </script>
 
 </body>
