Javascript Adding Strings and Numbers example

--- a/Javascript.html
+++ b/Javascript.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Javascript String Operators</h2>
+<h2>Javascript Adding Strings and Numbers</h2>
 
 <p id="demo"></p>
 
 <script>
-let text = "Ben Reilly is ";
-text += "the Scarlet Spider"; // the += adds this text to the "text" variable
-document.getElementById("demo").innerHTML = text;
+let x = 1 + 1;
+let y = "1" + 1;
+let z = "One" + 1;
+document.getElementById("demo").innerHTML = x + "<br>" + y + "<br>" + z;
 </script>
 
 </body>
