Javascript Arithmetic Operation example 1

--- a/Javascript.html
+++ b/Javascript.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Javascript Adding Strings and Numbers</h2>
+<h2>Javascript Arithmetic Operations</h2>
 
 <p id="demo"></p>
-
 <script>
-let x = 1 + 1;
-let y = "1" + 1;
-let z = "One" + 1;
-document.getElementById("demo").innerHTML = x + "<br>" + y + "<br>" + z;
+let x = 100 + 200; // In this typical arithmetic operation example, the numbers are literals
+document.getElementById("demo").innerHTML = x;
 </script>
 
 </body>
