Javascript Arithmetic Operations example 2

--- a/Javascript.html
+++ b/Javascript.html
@@ -5,7 +5,9 @@
 
 <p id="demo"></p>
 <script>
-let x = 100 + 200; // In this typical arithmetic operation example, the numbers are literals
+let a = 100;
+let b = 200;
+let x = a + b; // In this example, the numbers are variables
 document.getElementById("demo").innerHTML = x;
 </script>
 
