Javascript Arithmetic Operations example 3

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,8 +6,7 @@
 <p id="demo"></p>
 <script>
 let a = 100;
-let b = 200;
-let x = a + b; // In this example, the numbers are variables
+let x = (100 + 200) * a; // In this example, the numbers are expressions
 document.getElementById("demo").innerHTML = x;
 </script>
 
