Javascript Operators and Operands example 1

--- a/Javascript.html
+++ b/Javascript.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Javascript Arithmetic Operations</h2>
+<h2>Javascript Operators and Operands</h2>
 
 <p id="demo"></p>
 <script>
-let a = 100;
-let x = (100 + 200) * a; // In this example, the numbers are expressions
-document.getElementById("demo").innerHTML = x;
+let x = 10;
+let y = 15;
+let z = x + y; // In this example, the operator is +, so the numbers are added
+document.getElementById("demo").innerHTML = z;
 </script>
 
 </body>
