Javascript Operators and Operands example 2

--- a/Javascript.html
+++ b/Javascript.html
@@ -7,7 +7,8 @@
 <script>
 let x = 10;
 let y = 15;
-let z = x + y; // In this example, the operator is +, so the numbers are added
+let z = x - y; /* In this example, the operator is -, 
+so the value z is equal to of x is subtracted from the value of y*/
 document.getElementById("demo").innerHTML = z;
 </script>
 
