Javascript Operators and Operands example 4

--- a/Javascript.html
+++ b/Javascript.html
@@ -7,8 +7,8 @@
 <script>
 let x = 10;
 let y = 15;
-let z = x * y; /* In this example, the operator is *, 
-so the value z is equal to the value of x multiplied by y*/
+let z = x / y; /* In this example, the operator is /, 
+so the value z is equal to the value of x dvided by y*/
 document.getElementById("demo").innerHTML = z;
 </script>
 
