--- a/Javascript.html
+++ b/Javascript.html
@@ -7,8 +7,8 @@
 <script>
 let x = 10;
 let y = 15;
-let z = x / y; /* In this example, the operator is /, 
-so the value z is equal to the value of x dvided by y*/
+let z = x % y; /* In this example, the operator is %, 
+so the value z is equal to the value of the division remainder of x divided y*/
 document.getElementById("demo").innerHTML = z;
 </script>
 
