Javascript Operators and Operands example 6

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,9 +6,9 @@
 <p id="demo"></p>
 <script>
 let x = 10;
-let y = 15;
-let z = x % y; /* In this example, the operator is %, 
-so the value z is equal to the value of the division remainder of x divided y*/
+x++; /* In this example, the operator is ++, 
+so the value z is equal to the value of the increment of x*/
+let z = x;
 document.getElementById("demo").innerHTML = z;
 </script>
 
