Javascript Operators and Operands example 7

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,8 +6,8 @@
 <p id="demo"></p>
 <script>
 let x = 10;
-x++; /* In this example, the operator is ++, 
-so the value z is equal to the value of the increment of x*/
+x--; /* In this example, the operator is --, 
+so the value z is equal to the value of the decrement of x*/
 let z = x;
 document.getElementById("demo").innerHTML = z;
 </script>
