Javascript Operators and Operands example 8

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,10 +6,9 @@
 <p id="demo"></p>
 <script>
 let x = 10;
-x--; /* In this example, the operator is --, 
-so the value z is equal to the value of the decrement of x*/
-let z = x;
-document.getElementById("demo").innerHTML = z;
+document.getElementById("demo").innerHTML = x ** 5; 
+/* In this example, the operator is **, so the result is equal 
+to the value of the first operand (10) raised to the value of the second operand (5) */
 </script>
 
 </body>
