Javascript Operators and Operands example 9

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,9 +6,7 @@
 <p id="demo"></p>
 <script>
 let x = 10;
-document.getElementById("demo").innerHTML = x ** 5; 
-/* In this example, the operator is **, so the result is equal 
-to the value of the first operand (10) raised to the value of the second operand (5) */
+document.getElementById("demo").innerHTML = Math.pow(x, 5); // Math.pow(x,y) produces the same result as x ** y
 </script>
 
 </body>
