--- a/Javascript.html
+++ b/Javascript.html
@@ -5,8 +5,10 @@
 
 <p id="demo"></p>
 <script>
-let x = 10;
-document.getElementById("demo").innerHTML = Math.pow(x, 5); // Math.pow(x,y) produces the same result as x ** y
+/* Since multiplication has higher precedence than additon,
+just like in math, the numbers in the parentheses will be
+multiplied first */
+document.getElementById("demo").innerHTML = (1 + 2) * 3;
 </script>
 
 </body>
