JS Operators and Operands example 10 corrected

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,9 +6,9 @@
 <p id="demo"></p>
 <script>
 /* Since multiplication has higher precedence than additon,
-just like in math, the numbers in the parentheses will be
-multiplied first */ 
-document.getElementById("demo").innerHTML = (1 + 2) * 3;
+just like in math, the numbers will be
+multiplied first */
+document.getElementById("demo").innerHTML = 1 + 2 * 3;
 </script>
 
 </body>
