Javascript Operators and Operands example 11

--- a/Javascript.html
+++ b/Javascript.html
@@ -5,10 +5,9 @@
 
 <p id="demo"></p>
 <script>
-/* Since multiplication has higher precedence than additon,
-just like in math, the numbers will be
-multiplied first */
-document.getElementById("demo").innerHTML = 1 + 2 * 3;
+/* Unless parentheses are present, in which 
+the numbers inside the parentheses are computed first */
+document.getElementById("demo").innerHTML = (1 + 2) * 3;
 </script>
 
 </body>
