Javascript Assignments example 1

--- a/Javascript.html
+++ b/Javascript.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Javascript Operators and Operands</h2>
+<h1>Javascript Assignments</h1>
+<h2>Simple Assignments</h2>
 
 <p id="demo"></p>
+
 <script>
-/* If multiple operations have the same
-precedence, the computations happens left to right */
-document.getElementById("demo").innerHTML = 1 + 2 - 3 + "<br>" + 8 * 5 / 3;
+let x = 5;
+document.getElementById("demo").innerHTML = "The value of x is " + x;
 </script>
 
 </body>
