--- a/Javascript.html
+++ b/Javascript.html
@@ -7,7 +7,8 @@
 <p id="demo"></p>
 
 <script>
-let x = 5;
+let y = 25;    
+let x = 5 + y;
 document.getElementById("demo").innerHTML = "The value of x is " + x;
 </script>
 
