--- a/Javascript.html
+++ b/Javascript.html
@@ -7,8 +7,8 @@
 <p id="demo"></p>
 
 <script>
-let y = 25;    
-let x = 5 + y;
+let x = 25;    
+x += 5;
 document.getElementById("demo").innerHTML = "The value of x is " + x;
 </script>
 
