Javascript Assignments example 4

--- a/Javascript.html
+++ b/Javascript.html
@@ -7,9 +7,9 @@
 <p id="demo"></p>
 
 <script>
-let x = 25;    
-x += 5;
-document.getElementById("demo").innerHTML = "The value of x is " + x;
+let text = "Hello ";    
+text += "World!";
+document.getElementById("demo").innerHTML = text;
 </script>
 
 </body>
