Javascript Assignments example 5

--- a/Javascript.html
+++ b/Javascript.html
@@ -7,9 +7,9 @@
 <p id="demo"></p>
 
 <script>
-let text = "Hello ";    
-text += "World!";
-document.getElementById("demo").innerHTML = text;
+let x = 25;    
+x -= 5;
+document.getElementById("demo").innerHTML = "The value of x is " + x;
 </script>
 
 </body>
