--- a/Javascript.html
+++ b/Javascript.html
@@ -7,9 +7,8 @@
 <p id="demo"></p>
 
 <script>
-let x = 25;    
-x ||= 5;
-document.getElementById("demo").innerHTML = "The value of x is " + x;
+let x;
+document.getElementById("demo").innerHTML = x ??= 5;
 </script>
 
 </body>
