Javascript Data Type example 6

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,11 +6,11 @@
 <p id="demo"></p>
 
 <script>
-// You can use quotes inside a string, as long as they don't match the quotes surrounding the string
-let question = "'How are you?'"; // In this example, 'How are you' is inside single quotation marks ('')
-let answer1 = "'I'm good, thank you!'"; // single quotation marks ('') inside string
-let answer2 = '"I am well, thank you!"'; // double quotation marks ("") inside string 
-document.getElementById("demo").innerHTML = question + "<br>" + answer1 + "<br>" + answer2;
+let x1 = 1; // Numbers in Javascript can be written without decimals
+let x2 = 1.00; // or with decimals (note: number will output as "1" since the number ends in 0)
+let x3 = 1.01;
+document.getElementById("demo").innerHTML = x1 + "<br>" + x2 + "<br>" + x3;
+    
 </script>
 
 </body>
