--- a/Javascript.html
+++ b/Javascript.html
@@ -6,10 +6,10 @@
 <p id="demo"></p>
 
 <script>
-let x1 = 1; // Numbers in Javascript can be written without decimals
-let x2 = 1.00; // or with decimals (note: number will output as "1" since the number ends in 0)
-let x3 = 1.01;
-document.getElementById("demo").innerHTML = x1 + "<br>" + x2 + "<br>" + x3;
+// Numbers can be written with scientific notation    
+let x = 567e8;
+let y = 8910e11;
+document.getElementById("demo").innerHTML = x + "<br>" + y;
     
 </script>
 
