Javascript Data Types example 8

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,11 +6,8 @@
 <p id="demo"></p>
 
 <script>
-// Numbers can be written with scientific notation    
-let x = 567e8;
-let y = 8910e11;
-document.getElementById("demo").innerHTML = x + "<br>" + y;
-    
+let x = BigInt(704274274926265313458153494970753815381737536818163)
+document.getElementById("demo").innerHTML = x;
 </script>
 
 </body>
