Javascript Data Types example 9

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,8 +6,10 @@
 <p id="demo"></p>
 
 <script>
-let x = BigInt(704274274926265313458153494970753815381737536818163)
-document.getElementById("demo").innerHTML = x;
+let x = 1;
+let y = 1;
+let z = 2;
+document.getElementById("demo").innerHTML = ( x==y ) + "<br>" + ( x==z );
 </script>
 
 </body>
