--- a/Javascript.html
+++ b/Javascript.html
@@ -6,10 +6,10 @@
 <p id="demo"></p>
 
 <script>
-let x = 1;
-let y = 1;
-let z = 2;
-document.getElementById("demo").innerHTML = ( x==y ) + "<br>" + ( x==z );
+let bigThree = ["Nintendo","Microsoft","Sony"];
+document.getElementById("demo").innerHTML = bigThree[0]; /* "Nintendo" is 0 in this array, 
+                                                             so it is first and is specified
+                                                             to be the only entry in the array to output*/
 </script>
 
 </body>
