Javascript Data Types example 12

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,14 +6,10 @@
 <p id="demo"></p>
 
 <script>
-const brand = {
-    brandName : "Nintendo",
-    ageOfCompany : 135,
-    product : "videoGames"
-};
-
-document.getElementById("demo").innerHTML = brand.brandName + " is a " + brand.ageOfCompany + 
-"-year old " + "Japanese company.";
+document.getElementById("demo").innerHTML = 
+typeof "" + "<br>" +
+typeof "Hello, World!" + "<br>" +
+typeof "Link";
 </script>
 
 </body>
