Javascript Data Types example 12.5

--- a/Javascript.html
+++ b/Javascript.html
@@ -7,9 +7,9 @@
 
 <script>
 document.getElementById("demo").innerHTML = 
-typeof "" + "<br>" +
-typeof "Hello, World!" + "<br>" +
-typeof "Link";
+typeof 0 + "<br>" +
+typeof 1 + "<br>" + 
+typeof (2 + 2);    
 </script>
 
 </body>
