Javascript Data Types example 15

--- a/Javascript.html
+++ b/Javascript.html
@@ -6,10 +6,8 @@
 <p id="demo"></p>
 
 <script>
-let thing = "brick";
-thing = undefined;
-document.getElementById("demo").innerHTML = "<p>The value of thing is " + thing + 
-"<p>The typeof thing is " + typeof thing;    
+let thing = "";
+document.getElementById("demo").innerHTML = "The value is " + thing + "<br>" + "The type is " + typeof thing;
 </script>
 
 </body>
