--- a/Javascript.html
+++ b/Javascript.html
@@ -6,12 +6,12 @@
 <p id="demo"></p>
 
 <script>
-function thisFunction(a1, a2) {
-    return a1 * a2;
-}    
-let result = thisFunction(8, 4);
+function toCelsius(fahrenheit) {
+    return 5/9 * (fahrenheit-32);
+}
 
-document.getElementById("demo").innerHTML = "The result is " + result;
+let value = toCelsius(77);
+document.getElementById("demo").innerHTML = value;
 </script>
 
 </body>
