JavaScript Functions example 5 Part 2

--- a/Javascript.html
+++ b/Javascript.html
@@ -7,7 +7,7 @@
 
 <script>
 // before Arrow    
-let thisFunction = function(a, b) {return a * b};
+thisFunction = (a, b) => a * b;
 
 let result = thisFunction(4, 4);
 document.getElementById("demo").innerHTML = "The product is " + result;
